package S191220016;

import S191220016.Line.Position;

public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();

}
